fixed a problem with the iframe width on mobile in the js file

--- a/style.css
+++ b/style.css
@@ -108,7 +108,7 @@ div.about{
     color: rgba(0, 0.8);
 	z-index: 90;
 	max-width: 277px;
-	right: 142px;
+	right: 145px;
 	top: 155px;
 }
 
